# StereoCameraCalibration

./: CMakeLists.txt  README.md  stereo_calib.cpp
data/: stereo_calib.xml
